@@ -84,6 +84,7 @@ Improvements:
     * rebase dns.c against upstream
     * Don't over align data if they are already aligned.
     * edje entry: remove ecore_imf_context_reset, cursor update in mouse move event because it's useless.
+    * edje entry: move ecore_imf_context_cursor_position_set from mouse down event to mouse up event.
 
 Fixes:
     * Fix PPC (big endian) image codec bug.
